# WonShellExecute

./: .gitignore  CMakeLists.txt  README.md  WonSafeOpen.h  WonZoneCheck.h  debug.h  osinfo.cpp  osinfo.h  resource.h  shlexec.cpp  shlexec.h  shlexec_res.rc  shstr.h  test1.cpp  test2.cpp  test3.cpp  tests.cpp  utils.cpp  utils.h
